Fix divider spacing symmetry around project list

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ a, .project-title, .name-link {
 .divider {
   height: 1px;
   background-color: #e0e0e0;
-  margin: 22px 0 0;
+  margin: 0;
 }
 
 /* ===== Project List ===== */
